[package]
name = "rts_game_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy = { version = "0.3.1", features = ["ldtk"] }
pathfinding = "4.9.1"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 1
